[package]
name = "swisstopo2bevyterrain"
authors = ["Nicola Papale"]
description = "A utility to translate TIFFs into PNG"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicopap/swisstopo2bevyterrain"
homepage = "https://github.com/nicopap/swisstopo2bevyterrain"
exclude = ["assets", ".github"]
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { default-features = false, version = "4.0", features = ["derive", "std"] }
image = { default-features = false, version = "0.24.5", features = ["png", "tiff"]}
tiff = "0.8"